Fix footer overlapping content

--- a/app/globals.css
+++ b/app/globals.css
@@ -105,3 +105,7 @@ a {
     color-scheme: dark;
   }
 }
+
+.pb-body {
+  padding-bottom: 10rem;
+}
